# storage/api-docs/api-docs.json
@@ -2923,6 +2923,10 @@
                                                             "nombre": {
                                                                 "type": "string",
                                                                 "example": "nombre.read"
+                                                            },
+                                                            "endpoint": {
+                                                                "type": "string",
+                                                                "example": "9d78f245-f961-4b5a-95cb-825620e5602af"
                                                             }
                                                         },
                                                         "type": "object"
@@ -2983,6 +2987,10 @@
                                     "nombre": {
                                         "type": "string",
                                         "example": "alumno.read"
+                                    },
+                                    "endpoint": {
+                                        "type": "string",
+                                        "example": "9d78f245-f961-4b5a-95cb-825620e5602af"
                                     }
                                 },
                                 "type": "object"
@@ -3016,6 +3024,10 @@
                                                         "nombre": {
                                                             "type": "string",
                                                             "example": "nombre.read"
+                                                        },
+                                                        "endpoint": {
+                                                            "type": "string",
+                                                            "example": "9d78f245-f961-4b5a-95cb-825620e5602af"
                                                         }
                                                     },
                                                     "type": "object"
@@ -3103,6 +3115,10 @@
                                                         "nombre": {
                                                             "type": "string",
                                                             "example": "nombre.read"
+                                                        },
+                                                        "endpoint": {
+                                                            "type": "string",
+                                                            "example": "9d78f245-f961-4b5a-95cb-825620e5602af"
                                                         }
                                                     },
                                                     "type": "object"
@@ -3174,6 +3190,10 @@
                                     "nombre": {
                                         "type": "string",
                                         "example": "alumno.read"
+                                    },
+                                    "endpoint": {
+                                        "type": "string",
+                                        "example": "9d78f245-f961-4b5a-95cb-825620e5602af"
                                     }
                                 },
                                 "type": "object"
@@ -3207,6 +3227,10 @@
                                                         "nombre": {
                                                             "type": "string",
                                                             "example": "nombre.read"
+                                                        },
+                                                        "endpoint": {
+                                                            "type": "string",
+                                                            "example": "9d78f245-f961-4b5a-95cb-825620e5602af"
                                                         }
                                                     },
                                                     "type": "object"
